--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.1",
+    "babel-plugin-module-resolver": "^3.1.1",
     "babel-preset-env": "^1.7.0",
     "commitizen": "^2.10.1",
     "css-loader": "^1.0.0",
