--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "webpack-dev-server": "^3.1.7"
   },
   "dependencies": {
+    "normalize.css": "^8.0.0",
     "p5": "^0.7.1",
     "standard-version": "^4.4.0"
   },
