--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "dev": "webpack-dev-server --mode development --hot",
     "build": "webpack --mode production",
-    "lint": "eslint .",
+    "lint": "eslint . && stylelint ./src",
     "commit": "git-cz",
     "release": "standard-version"
   },
@@ -41,6 +41,9 @@
     "prettier": "^1.14.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
+    "stylelint": "^9.5.0",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-order": "^1.0.0",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.7"
