--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.1",
     "babel-plugin-module-resolver": "^3.1.1",
-    "babel-preset-env": "^1.7.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "commitizen": "^2.10.1",
     "css-loader": "^1.0.0",
     "cz-conventional-changelog": "^2.1.0",
